--- a/packages/@websites/coffeekraken-io/src/css/generic/ck-version-selector.css
+++ b/packages/@websites/coffeekraken-io/src/css/generic/ck-version-selector.css
@@ -33,12 +33,54 @@
         @sugar.depth (100);
     }
 
+    ._header {
+        /* background: sugar.color(complementary); */
+        padding: sugar.padding(30) sugar.padding(30);
+        border-top-left-radius: sugar.border.radius();
+        border-top-right-radius: sugar.border.radius();
+        background-color: sugar.color(base, --lighten 50);
+        background-position: 50% 50%;
+        background-size: cover;
+
+        @sugar.theme.when dark {
+            background-image: url('/dist/img/discord-illustration-bkg.png');
+            background-color: sugar.color(complementary, --lighten 10);
+            background-color: sugar.color(base, --darken 10);
+        }
+    }
+    ._footer {
+        /* background: sugar.color(complementary); */
+        background-color: sugar.color(base, --lighten 50);
+        padding: sugar.padding(30) sugar.padding(30);
+        border-bottom-left-radius: sugar.border.radius();
+        border-bottom-right-radius: sugar.border.radius();
+        background-position: 50% 50%;
+        background-size: cover;
+        font-size: sugar.font.size(25);
+
+        @sugar.theme.when dark {
+            background-color: sugar.color(base, --darken 17);
+        }
+
+        display: flex;
+
+        > div:first-child {
+            flex-grow: 1;
+        }
+
+        /* background-image: url('/dist/img/discord-illustration-bkg.png'); */
+    }
+
     ._versions {
-        background: sugar.color(base, background);
         max-height: calc(100vh - 300px);
+        background: sugar.color(base, surface, --darken 1);
         /* overflow-y: auto; */
         min-width: 200px;
         @sugar.scrollbar;
+
+        @sugar.theme.when dark {
+            background: sugar.color(base, surface);
+        }
 
         ._version {
             padding: sugar.padding(30) sugar.padding(30);
@@ -51,7 +93,10 @@
             }
 
             &:hover {
-                background: sugar.color(base, background, --lighten 5);
+                background: sugar.color(base, surface, --darken 3);
+                @sugar.theme.when dark {
+                    background: sugar.color(base, surface, --lighten 5);
+                }
             }
 
             ._number {
