--- a/packages/@websites/coffeekraken-io/src/css/generic/diagonal-section.css
+++ b/packages/@websites/coffeekraken-io/src/css/generic/diagonal-section.css
@@ -8,6 +8,9 @@
     z-index: 1;
   }
 
+  /* background: sugar.color(base, surface, --alpha 1); */
+  background: sugar.color(base, --alpha 0.01);
+
   @sugar.theme.when dark {
     background: sugar.color(base, surface, --alpha 0.3);
   }
@@ -19,7 +22,7 @@
     left: 0;
     width: 100%;
     height: 500px;
-    background: sugar.color(base, surface, --alpha 0.5);
+    background: sugar.color(base, --alpha 0.01);
     clip-path: polygon(0 100%, 100% 0, 100% 100%, 0 100%);
     z-index: -1;
   }
@@ -36,7 +39,7 @@
     left: 0;
     width: 100%;
     height: 500px;
-    background: sugar.color(base, surface, --alpha 0.5);
+    background: sugar.color(base, --alpha 0.01);
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 100%);
     z-index: -1;
   }
