--- a/packages/@websites/coffeekraken-io/src/views/layouts/footer/footer.css
+++ b/packages/@websites/coffeekraken-io/src/views/layouts/footer/footer.css
@@ -1,47 +1,52 @@
 .footer {
+  background-color: sugar.color(main, surface);
+  padding-block: sugar.padding(100);
+  padding-inline: sugar.padding(50);
+  position: relative;
+  z-index: 20;
+  border-top: 1px solid sugar.color(base, --alpha 0.05);
+
+  @sugar.theme.when dark {
     background-color: sugar.color(main, surface);
-    padding-block: sugar.padding(100);
-    padding-inline: sugar.padding(50);
-    position: relative;
-    z-index: 20;
+  }
 
-    @sugar.media mobile {
-        padding-block: sugar.padding(70);
-    }
+  @sugar.media mobile {
+    padding-block: sugar.padding(70);
+  }
 
-    svg {
-        height: 60px;
-        width: 140px;
-        margin-block-end: sugar.margin(30);
-    }
+  svg {
+    height: 60px;
+    width: 140px;
+    margin-block-end: sugar.margin(30);
+  }
+  svg .main {
+    fill: sugar.color(base, --darken 55);
+  }
+  svg .accent {
+    fill: sugar.color(accent);
+  }
+
+  @sugar.theme.when (dark) {
     svg .main {
-        fill: sugar.color(base, --darken 55);
+      fill: sugar.color(main, text);
     }
     svg .accent {
-        fill: sugar.color(accent);
+      fill: sugar.color(accent);
     }
+  }
 
-    @sugar.theme.when (dark) {
-        svg .main {
-            fill: sugar.color(main, text);
-        }
-        svg .accent {
-            fill: sugar.color(accent);
-        }
+  ._columns {
+    display: flex;
+    justify-content: space-between;
+
+    @sugar.media mobile {
+      flex-wrap: wrap;
+      display: none;
+
+      > div {
+        width: 100%;
+        margin-block-start: sugar.margin(30);
+      }
     }
-
-    ._columns {
-        display: flex;
-        justify-content: space-between;
-
-        @sugar.media mobile {
-            flex-wrap: wrap;
-            display: none;
-
-            > div {
-                width: 100%;
-                margin-block-start: sugar.margin(30);
-            }
-        }
-    }
+  }
 }
