--- a/packages/components/s-slider-component/src/css/s-slider-component.css
+++ b/packages/components/s-slider-component/src/css/s-slider-component.css
@@ -89,6 +89,7 @@
         height: 100%;
         transform: translate(-50%, -50%);
         pointer-events: none;
+        z-index: 10;
 
         * {
             pointer-events: all;
@@ -106,23 +107,23 @@
         }
     }
 
-    > .s-slider_root {
+    & > .s-slider_root {
         position: relative;
 
-        > .s-slider_slides-wrapper {
+        & > .s-slider_slides-wrapper {
             /* position: absolute;
             top: 0;
             left: 0; */
             width: 100%;
             height: 100%;
 
-            > .s-slider_slides {
+            & > .s-slider_slides {
                 display: inline-flex;
                 user-select: none;
                 height: 100%;
                 /* white-space: nowrap; */
 
-                > .s-slider_slide {
+                & > .s-slider_slide {
                     display: block;
                     flex-shrink: 0;
                     flex-grow: 0;
@@ -161,11 +162,11 @@
                     width: 0.5em;
                     height: 0.5em;
                     background: currentColor;
-                    opacity: 0.3;
+                    opacity: 0.2;
                     cursor: pointer;
 
                     &:hover {
-                        opacity: 0.6;
+                        opacity: 0.5;
                     }
                     &.active {
                         opacity: 1;
@@ -202,7 +203,7 @@
         }
     }
 
-    &[lnf*='contained'] .s-slider_root > .s-slider_ui > .s-slider_nav {
+    &[lnf$='-contain'] .s-slider_root > .s-slider_ui > .s-slider_nav {
         top: auto;
         bottom: calc(var(--s-slider-space) - 0.5em);
         transform: translate(-50%, -100%);
@@ -213,7 +214,7 @@
         transform: translate(0, -50%);
         flex-direction: column;
     }
-    &[lnf*='contained'][direction='vertical']
+    &[lnf$='-contain'][direction='vertical']
         .s-slider_root
         > .s-slider_ui
         > .s-slider_nav {
@@ -223,19 +224,19 @@
         transform: translate(0, -50%);
     }
 
-    &[lnf*='tight'][direction='horizontal'][controls] {
+    &[lnf$='-tight'][direction='horizontal'][controls] {
         padding-left: calc(var(--s-slider-space) + 1em);
         padding-right: calc(var(--s-slider-space) + 1em);
     }
-    &[lnf*='tight'][direction='horizontal'][nav] {
+    &[lnf$='-tight'][direction='horizontal'][nav] {
         padding-bottom: calc(var(--s-slider-space) + 1em);
     }
 
-    &[lnf*='tight'][direction='vertical'][controls] {
+    &[lnf$='-tight'][direction='vertical'][controls] {
         padding-top: calc(var(--s-slider-space) + 1em);
         padding-bottom: calc(var(--s-slider-space) + 1em);
     }
-    &[lnf*='tight'][direction='vertical'][nav] {
+    &[lnf$='-tight'][direction='vertical'][nav] {
         padding-right: calc(var(--s-slider-space) + 1em);
     }
 
@@ -255,7 +256,7 @@
             width: 100%;
             height: 100%;
             background: currentColor;
-            opacity: 0.3;
+            opacity: 0.2;
         }
 
         > .s-slider_progress-bar {
@@ -271,11 +272,11 @@
         }
     }
 
-    &[lnf*='contained'] .s-slider_root > .s-slider_ui > .s-slider_progress {
+    &[lnf$='-contain'] .s-slider_root > .s-slider_ui > .s-slider_progress {
         bottom: calc(var(--s-slider-space) * 2);
     }
 
-    > .s-slider_root > .s-slider_ui > .s-slider_controls {
+    & > .s-slider_root > .s-slider_ui > .s-slider_controls {
         .s-slider_controls-next,
         .s-slider_controls-previous {
             width: 1em;
@@ -284,7 +285,7 @@
             top: 50%;
             transform: translateY(-50%);
             cursor: pointer;
-            opacity: 0.3;
+            opacity: 0.2;
             pointer-events: none;
             color: currentColor;
 
@@ -300,22 +301,26 @@
             left: calc(100% + var(--s-slider-space));
         }
     }
-    &[lnf*='contained']
+    &[lnf$='-contight'],
+    &[lnf$='-contain'] {
         > .s-slider_root
-        > .s-slider_ui
-        > .s-slider_controls
-        .s-slider_controls-previous {
-        left: var(--s-slider-space);
-        transform: translate(0, -50%);
+            > .s-slider_ui
+            > .s-slider_controls
+            .s-slider_controls-previous {
+            left: var(--s-slider-space);
+            transform: translate(0, -50%);
+        }
     }
-    &[lnf*='contained']
+    &[lnf$='-contight'],
+    &[lnf$='-contain'] {
         > .s-slider_root
-        > .s-slider_ui
-        > .s-slider_controls
-        .s-slider_controls-next {
-        left: auto;
-        right: var(--s-slider-space);
-        transform: translate(0, -50%);
+            > .s-slider_ui
+            > .s-slider_controls
+            .s-slider_controls-next {
+            left: auto;
+            right: var(--s-slider-space);
+            transform: translate(0, -50%);
+        }
     }
 
     &[direction='vertical']
@@ -337,20 +342,24 @@
         top: auto;
         transform: translate(-50%, 0) rotate(90deg);
     }
-    &[direction='vertical'][lnf*='contained']
+    &[direction='vertical'][lnf$='-contight'],
+    &[direction='vertical'][lnf$='-contain'] {
         > .s-slider_root
-        > .s-slider_ui
-        > .s-slider_controls
-        .s-slider_controls-previous {
-        top: calc(var(--s-slider-space));
+            > .s-slider_ui
+            > .s-slider_controls
+            .s-slider_controls-previous {
+            top: calc(var(--s-slider-space));
+        }
     }
-    &[direction='vertical'][lnf*='contained']
+    &[direction='vertical'][lnf$='-contight'],
+    &[direction='vertical'][lnf$='-contain'] {
         > .s-slider_root
-        > .s-slider_ui
-        > .s-slider_controls
-        .s-slider_controls-next {
-        top: auto;
-        bottom: calc(var(--s-slider-space));
+            > .s-slider_ui
+            > .s-slider_controls
+            .s-slider_controls-next {
+            top: auto;
+            bottom: calc(var(--s-slider-space));
+        }
     }
 
     > .s-slider_root
