--- a/packages/tools/sugar/src/views/twig/sugar/layouts/main/main.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/layouts/main/main.twig
@@ -77,7 +77,9 @@
     </script>
     {% endif %}
 
-    {% block body %}{% endblock %}
+    <div class="s-viewport">
+        {% block body %}{% endblock %}
+    </div>
 
 </body>
 </html>
