--- a/packages/@examples/01-basic/src/views/layouts/header/header.css
+++ b/packages/@examples/01-basic/src/views/layouts/header/header.css
@@ -56,7 +56,7 @@
     }
 
     ._menu-toggle {
-        position: fixed;
+        position: absolute;
         top: calc(40px - 0.35em);
         right: 0;
         font-size: 30px;
