--- a/packages/@examples/01-basic/src/css/generic/menu/menu.css
+++ b/packages/@examples/01-basic/src/css/generic/menu/menu.css
@@ -6,14 +6,10 @@
     }
 
     @sugar.media <=mobile {
-        width: calc(100vw - (sugar.margin(30) * 2));
+        width: 100%;
         height: calc(100vh - 80px - (sugar.margin(30)));
-        top: calc(80px + sugar.margin(30));
+        top: 0;
         left: 0;
-
-        @sugar.lod (3) {
-            transform: translate(0, 100vh) scale(1.3);
-        }
 
         input:checked + & {
             transform: translate(0, 0) scale(1);
