--- a/packages/app/s-carpenter/src/css/s-carpenter-component.css
+++ b/packages/app/s-carpenter/src/css/s-carpenter-component.css
@@ -1,3 +1,9 @@
+@import './vars.css';
+
+.s-viewport {
+    left: var(--s-carpenter-media-left) !important;
+}
+
 .s-carpenter {
 }
 .s-carpenter_website-iframe,
