--- a/packages/@examples/01-basic/src/views/layouts/main.twig
+++ b/packages/@examples/01-basic/src/views/layouts/main.twig
@@ -27,6 +27,6 @@
 
     {% include 'layouts/footer/footer.twig' %}
 
-    <s-carpenter iframe></s-carpenter>
+    <s-carpenter></s-carpenter>
 
 {% endblock %}
